# redis-hs

./: .gitignore  LICENSE  README.md  haddock.sh  redis-hs.cabal
examples/: 1.hs
src/Database/: Redis.hs
src/Database/Redis/: Connection.hs  General.hs  Hash.hs  Internal.hs  List.hs  Persistence.hs  Server.hs  Set.hs  SortedSet.hs  String.hs  Transaction.hs
test/: README  redis-tests.cabal  testsAndCoverage.sh
test/suite/: TestSuite.hs
test/suite/Database/Redis/Connection/: Tests.hs
test/suite/Database/Redis/General/: Tests.hs
test/suite/Database/Redis/List/: Tests.hs
test/suite/Database/Redis/Set/: Tests.hs
test/suite/Database/Redis/String/: Tests.hs
test/suite/Database/Redis/Transaction/: Tests.hs
