name:               redis-hs
version:            0.2.0
author:             Will Langstroth <will@langstroth.com>
maintainer:         Will Langstroth <will@langstroth.com>
license:            MIT
license-file:       LICENSE
homepage:           http://github.com/wlangstroth/redis-hs
synopsis:           A simple Redis interface for Haskell
description:
  This package provides access to Redis stores using Data.Text for consistent
  handling of UTF8 encoding. The function set is almost complete.

category:           Database
build-type:         Simple
cabal-version:      >= 1.8

extra-source-files:
  --haddock.sh,
  --LICENSE,
  --README.md,
  --test/redis-tests.cabal,
  --test/suite/TestSuite.hs,
  --test/suite/Database/Redis/Connection/Tests.hs,
  --test/suite/Database/Redis/General/Tests.hs,
  --test/suite/Database/Redis/String/Tests.hs,
  --test/suite/Database/Redis/List/Tests.hs,
  --test/suite/Database/Redis/Set/Tests.hs

library
  hs-source-dirs: src

  exposed-modules:
    Database.Redis,
    Database.Redis.Internal,
    Database.Redis.Connection,
    Database.Redis.General,
    Database.Redis.String,
    Database.Redis.List,
    Database.Redis.Set,
    Database.Redis.SortedSet

  build-depends:
    base == 4.*,
    network,
    bytestring,
    text

  ghc-options: -Wall

  ghc-prof-options: -prof -auto-all

source-repository head
  type:     git
  location: http://github.com/wlangstroth/redis-hs.git
